2001-03-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k18 and auto* upgrade

2001-03-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpdc/ntpdc_ops.c (printpeer): No more "valid".
	* ntpd/ntp_request.c (peer_info): No more "valid".
	* ntpd/ntp_refclock.c (refclock_transmit): valid/hpoll cleanup.
	* ntpd/ntp_proto.c (transmit): valid/hpoll and peer->ttl cleanup.
	peer->valid/oreach cleanup.
	(receive): Call newpeer() with the pkt->ppoll, not
	NTP_MINDPOLL (in several places).
	In AM_NEWPASS, if we have a NULL peer, return.
	(poll_update): Added xpoll definition, fixed oldpoll definition.
	Algorithmic improvements.
	* ntpd/ntp_peer.c (newpeer): Better minpoll/maxpoll
	initialization. 
	(resetmanycast): That's a poll_update() on an MDF_ACAST, not a
	poll_clear().
	* ntpd/ntp_crypto.c: include <fcntl.h>.
	(crypto_recv): Leave the crypto_flags alone when wiggling the
	peer-> stuff.
	(crypto_cert): Make room for daddy.  Do a real open() on the cert
	file.  Read the cert.  Initial hack and slash.  Better debug info.
	* ntpd/ntp_control.c: CP_VALID now does "unreach".
	(ctl_putpeer): Ditto.
	* include/ntp_request.h: info_peer gets a placeholder for "valid".
	* include/ntp_crypto.h (CRYPTO_FLAG_CERT): Comment update.
	* include/ntp.h: Lose "valid" from struct peer.
	From: Dave Mills.

2001-03-05  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_proto.c (transmit): hpoll calc logic cleanup.
	(receive): New cert stuff.
	(poll_update): Improvements.
	(peer_clear): New cert stuff.
	(peer_xmit): New cert stuff.
	* ntpd/ntp_crypto.c: New cert stuff, documentation cleanup.  Lose
	extraneous poll_uopdate()s.
	* ntpd/ntp_control.c: Deal with new cert stuff.
	* ntpd/ntp_config.c (getconfig): Handle CONF_CRYPTO_CERT.
	* include/ntp_crypto.h (CRYPTO_FLAG_CERT): Added.
	(CRYPTO_CERT): Added.
	(CRYPTO_CONF_CERT): Added.
	Add declaration for struct value certif.
	* include/ntp_control.h (CS_CERTIF): Added.
	(CP_CERTIF): Added.