@@ -68,7 +68,7 @@ static volatile int pll_control; /* (0) daemon, (1) kernel loop */
 static volatile int status;	/* most recent status bits */
 static volatile int flash;	/* most recent ntp_adjtime() bits */
 char* progname;
-static char optargs[] = "cde:f:hm:o:rs:t:";
+static char optargs[] = "MNT:cde:f:hm:o:rs:t:";
 
 int
 main(
@@ -100,6 +100,24 @@ main(
 	memset((char *)&ntx, 0, sizeof(ntx));
 	progname = argv[0];
 	while ((c = ntp_getopt(argc, argv, optargs)) != EOF) switch (c) {
+#ifdef MOD_MICRO
+	    case 'M':
+		ntx.modes |= MOD_MICRO;
+		break;
+#endif
+#ifdef MOD_NANO
+	    case 'N':
+		ntx.modes |= MOD_NANO;
+		break;
+#endif
+#ifdef NTP_API
+# if NTP_API > 3
+	    case 'T':
+		ntx.modes = MOD_TAI;
+		ntx.constant = atoi(ntp_optarg);
+		break;
+# endif
+#endif
 	    case 'c':
 		cost++;
 		break;
@@ -128,7 +146,7 @@ main(
 	    case 's':
 		ntx.modes |= MOD_STATUS;
 		ntx.status = atoi(ntp_optarg);
-		if (ntx.status < 0 || ntx.status > 4) errflg++;
+		if (ntx.status < 0 || ntx.status >= 0x100) errflg++;
 		break;
 	    case 't':
 		ntx.modes |= MOD_TIMECONST;
@@ -140,6 +158,7 @@ main(
 	if (errflg || (ntp_optind != argc)) {
 		(void) fprintf(stderr,
 			       "usage: %s [-%s]\n\n\
+%s%s%s\
 -c		display the time taken to call ntp_gettime (us)\n\
 -e esterror	estimate of the error (us)\n\
 -f frequency	Frequency error (-500 .. 500) (ppm)\n\
@@ -149,7 +168,28 @@ main(
 -r		print the unix and NTP time raw\n\
 -l leap		Set the leap bits\n\
 -t timeconstant	log2 of PLL time constant (0 .. %d)\n",
-			       progname, optargs, MAXTC);
+			       progname, optargs,
+#ifdef MOD_MICRO
+"-M		switch to microsecond mode\n"
+#else
+""
+#endif
+#ifdef MOD_NANO
+"-N		switch to nanosecond mode\n"
+#else
+""
+#endif
+#ifdef NTP_API
+# if NTP_API > 3
+"-T tai_offset	set TAI offset\n"
+# else
+""
+# endif
+#else
+""
+#endif
+
+			       MAXTC);
 		exit(2);
 	}
 
